syntax = "proto3";
package chain4energy.c4echain.cfeminter;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/chain4energy/c4echain/x/cfeminter/types";

message MinterConfig {
  google.protobuf.Timestamp start_time = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  repeated Minter minters = 3;
}

message Minter {
  uint32 sequence_id = 1;
  google.protobuf.Timestamp end_time = 2 [
    (gogoproto.stdtime) = true
  ];
  // types:
  //   NO_MINTING;
  //   LINEAR_MINTING;
  //   EXPONENTIAL_STEP_MINTING;
  string type = 3;
  LinearMinting linear_minting = 4;
  ExponentialStepMinting exponential_step_minting = 5;
}

message LinearMinting {
  string amount = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message ExponentialStepMinting {
  string amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Duration step_duration = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
  string amount_multiplier = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message MinterState {
  uint32 sequence_id = 1;
  string amount_minted = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string remainder_to_mint = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp last_mint_block_time = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  string remainder_from_previous_period = 5 [ // TODO: rename to remainder_from_previous_minter
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}