syntax = "proto3";
package chain4energy.c4echain.cfeminter;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";


option go_package = "github.com/chain4energy/c4e-chain/x/cfeminter/types";

message Minter {

  google.protobuf.Timestamp start = 1 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  repeated MintingPeriod periods = 2; 

}

message MintingPeriod {

  int32 position = 1;
  google.protobuf.Timestamp period_end = 2 [(gogoproto.stdtime) = true];
  // types:
  //   NO_MINTING;
  //   TIME_LINEAR_MINTER;
  //   PERIODIC_REDUCTION_MINTER;
  string type = 3;
  TimeLinearMinter time_linear_minter = 4;
  PeriodicReductionMinter periodic_reduction_minter = 5;

}

message TimeLinearMinter {
  string amount = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

message PeriodicReductionMinter {
  // mint_period in seconds
  int32 mint_period = 1; 
  string mint_amount = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  int32 reduction_period_length = 3;
  string reduction_factor = 4 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

message MinterState {
  int32 current_position = 1;
  string amount_minted = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}